[package]
name = "grpc-service"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/grpc/server.rs"

[[bin]]
name = "client"
path = "src/grpc/client.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tonic = "0.9"
prost = "0.11"

[dependencies.orderbookX]
workspace = true

[build-dependencies]
tonic-build = "0.9"

[profile.release]
lto = "fat"
